[gd_scene load_steps=15 format=3 uid="uid://cgu38n3kah742"]

[ext_resource type="Script" path="res://Main.gd" id="1_3hasj"]
[ext_resource type="PackedScene" uid="uid://h0akjg07ydks" path="res://Player.tscn" id="1_ujuox"]
[ext_resource type="PackedScene" uid="uid://52a6e3p4y2mr" path="res://Mob.tscn" id="3_85ahk"]
[ext_resource type="Script" path="res://Retry.gd" id="4_jbps3"]
[ext_resource type="Theme" uid="uid://dlgv3i6i20s22" path="res://TextTheme.tres" id="4_p0sb2"]
[ext_resource type="Script" path="res://ScoreLabel.gd" id="5_de4eh"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ojypp"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_0c0l7"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uvb6h"]
albedo_color = Color(1, 0.0235294, 0.109804, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_q7x33"]
material = SubResource("StandardMaterial3D_uvb6h")

[sub_resource type="Curve3D" id="Curve3D_uvw72"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -11.0812, 0, -12.0857, 0, 0, 0, 0, 0, 0, 12.0682, 0, -12.0857, 0, 0, 0, 0, 0, 0, 12, 0, 14, 0, 0, 0, 0, 0, 0, -11.1497, 0, 13.8717, 0, 0, 0, 0, 0, 0, -11.0812, 0, -12.0857),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Animation" id="Animation_arhf5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Retry:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Retry:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(720, 540)]
}

[sub_resource type="Animation" id="Animation_kyx2g"]
resource_name = "show_retry"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Retry:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.129408, 1),
"update": 0,
"values": [Vector2(338, 268), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Retry:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.129408, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(720, 540)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h1hnl"]
_data = {
"RESET": SubResource("Animation_arhf5"),
"show_retry": SubResource("Animation_kyx2g")
}

[node name="Main" type="Node"]
script = ExtResource("1_3hasj")
mob_scene = ExtResource("3_85ahk")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_ojypp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_0c0l7")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.651344, 0.758783, 0, -0.758783, 0.651344, 0, 9.74892, 9.23966)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_ujuox")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19)
projection = 1
size = 19.0
far = 100.0

[node name="Node3D" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11, 0, -12)
mesh = SubResource("CylinderMesh_q7x33")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, -12)
mesh = SubResource("CylinderMesh_q7x33")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11, 0, 14)
mesh = SubResource("CylinderMesh_q7x33")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.6634, 0, 14.5668)
mesh = SubResource("CylinderMesh_q7x33")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_uvw72")

[node name="SpawnLocator" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -11.0812, 0, -12.0857)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Retry" type="ColorRect" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 720.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.352941)
script = ExtResource("4_jbps3")

[node name="Label" type="Label" parent="UI/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -13.0
offset_right = 75.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_p0sb2")
text = "Press Enter to retry"

[node name="ScoreLabel" type="Label" parent="UI"]
layout_mode = 1
offset_left = 21.0
offset_top = 17.0
offset_right = 109.0
offset_bottom = 48.0
theme = ExtResource("4_p0sb2")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 6
text = "Score: 0"
script = ExtResource("5_de4eh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI"]
libraries = {
"": SubResource("AnimationLibrary_h1hnl")
}

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
